# thesis

./: .default  .gitignore  CMakeLists.txt  Makefile  README.txt  TODO  TODO.txt  compile_and_run.sh  conf.json  fragen.txt  gui  inpaint.pgm  main.blg  parameter.txt
.presets/: besser.json  best_compression.json  better_inpainting_parameters.json  checkerboard.json  compression1.json  demo.json  disc_test.json  highnoise.json  latest_new.json  latest_weickert.json  preset1.json  quantile1.json  reconstruction.json  use_this_for_compression.json
harris-corner-detector_1.0/: test.py
images/: cat.pgm  office.pgm  trui.pgm
images/binary/: abstract1.pgm  abstract1_less_noise.pgm  abstract1_noise.pgm  abstract1_small.pgm  checkerboard128.pgm  checkerboard16.pgm  checkerboard32.pgm  checkerboard64.pgm  corner.pgm  ellipse.pgm  ellipse_small.pgm  flatcorner.pgm  pikachu_small_binary.pgm  rect.pgm  rect_tiny.pgm  semicircle.pgm  test0.pgm  test1.pgm  test2.pgm  test3.pgm  test4.pgm  test5.pgm  test6.pgm  test7.pgm  test8.pgm  test9.pgm  testlength.pgm
images/grey/: abstract_grey.pgm  junction.pgm  pikachu_small.pgm
include/: corner_detection.h  mask.h  utils.h
original_src/: amss.c  corner_colour.c  inpainting4.c  mask.c
output/: cat-inpaint-awesome.pgm  cat-mask-awesome.pgm  lena-inpaint.pgm  lena.pgm  lena512-mask.pgm
presentation/: script.txt  slides.nav  slides.pdfpc  slides.tex  slides.vrb
scripts/: create_mask.py  gauss_plot.py  generate_test_images.py  gui  run.py  run_all.py  run_harris.py  test_angles.py  test_disc.py  visualize_chains.py
src/: corner_detection.c  corner_detection_main.c  inpainting.c  mask.c  mask.h  mask_algo.c  mask_main.c  test_images.c  utils.c  utils.h
src/amss/: amss.c  amss.h  amss_corner_detection.c  amss_corner_detection.h  chain.c  chain.h  least_squares.c  (+2 more)
tex/: main.tex  outline  plot.py  references.bib
thesis/: main.tex  main_vimtex_selected.tex  references.bib  references_bibertool.bib
(+165 files in other folders)
